crates/oxc_linter/src/snapshots/jsx_a11y_aria_activedescendant_has_tabindex.snap
---
source: crates/oxc_linter/src/tester.rs
---

  ⚠ jsx-a11y(aria-activedescendant-has-tabindex): Elements with `aria-activedescendant` must be tabbable.
   ╭─[aria_activedescendant_has_tabindex.tsx:1:2]
 1 │ <div aria-activedescendant={someID} />;
   ·  ───
   ╰────
  help: Add a `tabindex` attribute to this div.

  ⚠ jsx-a11y(aria-activedescendant-has-tabindex): Elements with `aria-activedescendant` must be tabbable.
   ╭─[aria_activedescendant_has_tabindex.tsx:1:2]
 1 │ <CustomComponent aria-activedescendant={someID} />;
   ·  ───────────────
   ╰────
  help: Add a `tabindex` attribute to this CustomComponent.
